--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
     "nodemailer": "^6.10.0",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
